opam-version: "1.2"
maintainer: "freyr"
authors: ["et al."]
tags: []
license: ""
homepage: "https://github.com/Freyr666/ui-server"
dev-repo: "https://github.com/Freyr666/ui-server"
bug-reports: "https://github.com/Freyr666/ui-server/issues"
doc: ""
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "bitstring"
  "ppx_cstruct"
  "ppx_deriving_yojson"
  "ppx_sqlexpr"
  "containers"
  "websocket-lwt"
  "common"
  "storage"
  "meta_board"
  "api"
]
