opam-version: "1.2"
maintainer: "me"
authors: ["me et al."]
tags: []
license: ""
homepage: ""
dev-repo: ""
bug-reports: ""
doc: ""
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "containers"
  "containers.data"
  "lwt"
  "common"
  "storage"
]
