opam-version: "1.2"
maintainer: "freyr"
authors: ["et al."]
tags: []
license: ""
homepage: "https://github.com/Freyr666/ui-server"
dev-repo: "https://github.com/Freyr666/ui-server"
bug-reports: "https://github.com/Freyr666/ui-server/issues"
doc: ""
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "containers"
  "yojson"
  "ppx_deriving_yojson"
  "sqlexpr"
  "ppx_sqlexpr"
  "ctypes"
  "ctypes.foreign"
  "lwt"
  "websocket-lwt"
  "api"
  "storage"
  "common"
  "meta_board"
  "board-dvb-niit"
  "board-ip-dektec"
  "board-qos-niit"
]
