opam-version: "2.0"
authors: "Eugene Bulavin, Alex Yanin et al."
maintainer: "Eugene Bulavin <sky_rider_93@mail.ru>"
bug-reports: "https://github.com/Freyr666/ui-server/issues"
homepage: "https://github.com/Freyr666/ui-server"
dev-repo: "git+https://github.com/Freyr666/ui-server.git"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "angstrom"
  "base64"
  "bitstring"
  "caqti-driver-postgresql"
  "caqti-lwt"
  "chartjs"
  "chartjs-datalabels"
  "chartjs-streaming"
  "cohttp-lwt-unix"
  "color"
  "conf-libev"
  "cstruct"
  "ctypes"
  "ctypes-foreign"
  "dune"
  "fmt"
  "hex"
  "ipaddr"
  "janus-js"
  "js_of_ocaml"
  "js_of_ocaml-lwt"
  "js_of_ocaml-tyxml"
  "js_of_ocaml-ppx"
  "logs"
  "lwt"
  "lwt_react"
  "lwt_ssl"
  "macaddr"
  "mustache"
  "nocrypto"
  "obus"
  "pbkdf"
  "ppx_cstruct"
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ptime"
  "qoe_backend_lwt"
  "qoe_backend_types"
  "react"
  "tyxml"
  "uri"
  "uuidm"
  "websocket-lwt-unix"
  "x509" {>= "0.7.0"}
  "yojson" {>= "1.7.0"}
]
