(library
  (name        application)
  (wrapped     false)
  (synopsis    "app")
  (libraries   application_types
               boards
               board_dvb_niit
;;             board_ip_dektec
;;             board_qos_niit
;;             board_ts2ip_niit
               pipeline
               pc_control
               util_react
               kv_v
               db
               cyusb
               api_cohttp_template
               caqti-lwt)
  (preprocess (pps ppx_cstruct ppx_deriving_yojson ppx_deriving.eq)))
