(executable
  (name       backend)
  (modes      native)
  (libraries  application containers tyxml
              caqti-lwt lwt logs.lwt logs.fmt
              mustache cohttp-lwt-unix
              yojson ppx_deriving_yojson.runtime
              cstruct nocrypto nocrypto.lwt)
  (preprocess (pps ppx_deriving_yojson)))
