(library
  (name        cbuffer)
  (public_name cbuffer)
  (wrapped false)
  (synopsis "cstruct extension")
  (libraries  cstruct ctypes containers)
  (flags          (:standard -short-paths -strict-sequence -bin-annot
                   -w A+1..49+60-4-7-23-33-39-40-41-42-44-45-48))
  (ocamlopt_flags (:standard -O3 -unbox-closures)))
