(library
  (name        chartjs)
  (libraries   js_of_ocaml js_of_ocaml-tyxml containers components ptime gen_js_api)
  (flags       (:standard -short-paths -strict-sequence -bin-annot
                -w A+1..49+60-4-7-23-33-36-39-40-41-42-44-45-48))
  (js_of_ocaml (flags (:standard --disable genprim --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx gen_js_api.ppx)))

(rule
  (targets line_dataset_.ml)
  (deps line_dataset_.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets types_.ml)
  (deps types_.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets options_.ml)
  (deps options_.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))
