(library
  (name        chartjs)
  (libraries   js_of_ocaml js_of_ocaml-tyxml containers components ptime gen_js_api)
  (flags       (:standard -short-paths -strict-sequence -bin-annot
                -w A+1..49+60-4-7-23-33-36-39-40-41-42-44-45-48))
  (js_of_ocaml (flags (:standard --disable genprim --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx gen_js_api.ppx ppx_deriving.show)))

(rule
  (targets line.ml)
  (deps line.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets types.ml)
  (deps types.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets config.ml)
  (deps config.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets chart.ml)
  (deps chart.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets options.ml)
  (deps options.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))

(rule
  (targets scales.ml)
  (deps scales.mli)
  (action (run ocamlfind gen_js_api/gen_js_api %{deps})))
