(library
  (name        chartjs)
  (libraries   js_of_ocaml js_of_ocaml-tyxml containers components ptime gen_js_api)
  (flags       (:standard -short-paths -strict-sequence -bin-annot
                -w A+1..49+60-4-7-23-33-36-39-40-41-42-44-45-48))
  (js_of_ocaml (flags (:standard --disable genprim --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx gen_js_api.ppx ppx_deriving.show)))

(rule
  (targets line.ml types.ml pie_.ml config.ml chart.ml options.ml
           animation.ml scales.ml)
  (deps line.mli types.mli pie_.mli config.mli chart.mli options.mli
        animation.mli scales.mli)
  (action (progn
            (run ocamlfind gen_js_api/gen_js_api line.mli)
            (run ocamlfind gen_js_api/gen_js_api types.mli)
            (run ocamlfind gen_js_api/gen_js_api pie_.mli)
            (run ocamlfind gen_js_api/gen_js_api config.mli)
            (run ocamlfind gen_js_api/gen_js_api chart.mli)
            (run ocamlfind gen_js_api/gen_js_api options.mli)
            (run ocamlfind gen_js_api/gen_js_api animation.mli)
            (run ocamlfind gen_js_api/gen_js_api scales.mli))))