(library
  (name       common)
  (synopsis   "code shared between frontend and backend")
  (libraries  yojson ptime uri ipaddr ppx_deriving_yojson.runtime
              tyxml fmt containers angstrom uuidm cstruct logs lwt_react color)
  (preprocess (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.eq
               ppx_deriving.ord ppx_deriving.enum ppx_deriving.make)))