(library
  (name        components)
  ;(public_name components)
  (synopsis    "various js widgets")
  (libraries js_of_ocaml js_of_ocaml-tyxml js_of_ocaml-lwt ipaddr lwt_react
             vg ptime components_markup)
  (flags (:standard -short-paths -strict-sequence -bin-annot
           -w A+1..49+60-4-39-40-41-42-44-45-48))
  (js_of_ocaml  (flags (:standard  --opt 3)))
  (preprocess   (pps ppx_deriving_yojson js_of_ocaml-ppx ppx_deriving.eq ppx_deriving.ord)))
