(library
  (name        components)
  (synopsis    "various js widgets")
  (libraries   lwt_react js_of_ocaml ipaddr js_of_ocaml-tyxml js_of_ocaml-lwt
               vg components_markup ptime)
  (preprocess  (pps ppx_deriving_yojson js_of_ocaml-ppx
               ppx_deriving.eq ppx_deriving.ord)))
