(library
  (name        components)
  (synopsis    "various js widgets")
  (libraries   lwt_react
               js_of_ocaml
               js_of_ocaml-tyxml
               js_of_ocaml-lwt
               ipaddr
               vg
               vg.htmlc
               components_markup
               ptime
               color)
  (preprocess  (pps ppx_deriving_yojson js_of_ocaml-ppx
               ppx_deriving.eq ppx_deriving.ord)))
