(library
  (name        pc_control)
  (wrapped     true)
  (libraries   application_types
               nm
               packagekit
               netlib
               util_react
               kv_v
               api
               components_tyxml
               pc_control_types)
  (preprocess (pps ppx_deriving_yojson ppx_deriving.eq)))