(library
  (name        ui_templates)
  (public_name ui-templates)
  (synopsis    "common templates for building ui")
  (libraries   lwt containers common components api-js)
  (flags       (:standard -short-paths -strict-sequence -bin-annot
                -w A+1..49+60-4-7-23-33-36-39-40-41-42-44-45-48))
  (js_of_ocaml (flags (:standard +weak.js --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx ppx_deriving.eq ppx_deriving_yojson)))
