(library
  (name        usb_device)
  (public_name usb_device)
  (wrapped     false)
  (modes       native)
  (synopsis    "usb implementation")
  (libraries   ctypes ctypes.foreign lwt lwt.preemptive cbuffer boards)
  (flags          (:standard -short-paths -strict-sequence -bin-annot
                   -w A+1..49+60-4-7-23-27-33-39-40-41-42-44-45-48))
  (ocamlopt_flags (:standard -O3 -unbox-closures))
  (preprocess (pps ppx_deriving_yojson ppx_cstruct)))
