(library
  (name        api)
  (synopsis   "api framework")
  (modes       native)
  (libraries   common containers cohttp cohttp.lwt tyxml yojson mustache
               msgpck ppx_deriving_yojson.runtime websocket-lwt.cohttp
               components_tyxml)
  (flags          (:standard -short-paths -strict-sequence -bin-annot
                   -w A+1..49+60-4-7-23-27-33-34-39-40-41-42-44-45-48))
  (ocamlopt_flags (:standard -O3 -unbox-closures))
  (preprocess  (pps ppx_deriving.eq ppx_deriving_yojson)))

(rule
  (targets  api_types.ml)
  (deps     (:x ../api_types.ml))
  (action   (copy %{x} %{targets})))
