(library
  (name        api_js)
  (modules     requests)
  (synopsis    "js api framework")
  (libraries   common react js_of_ocaml js_of_ocaml-lwt yojson)
  (flags (:standard -short-paths -strict-sequence -bin-annot
          -w A+1..49+60-4-7-23-32-33-39-40-41-42-44-45-48))
  (js_of_ocaml (flags (:standard +weak.js --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx)))

(rule
 (targets api_types.ml)
 (deps    ../api_types.ml)
 (action  (copy ${<} ${@})))
