(library
  (name        application_js)
  (synopsis    "app js")
  (libraries   containers yojson ppx_deriving_yojson.runtime
               api_js components pipeline_js
               board_dektec_dtm3200_js
               board_niitv_dvb_js
               board_niitv_ts2ip_js)
  (preprocess  (pps js_of_ocaml-ppx ppx_deriving_yojson ppx_deriving.eq)))