(library
  (name        application_js)
  (libraries   containers
               components
               api_js
               time_uri
               pipeline_js
               pipeline_api_js
               ptime.clock.jsoo
               board_dektec_dtm3200_widgets_js
               board_niitv_dvb_widgets_js
               board_niitv_tsan_widgets_js)
  (preprocess  (pps js_of_ocaml-ppx
                    ppx_deriving_yojson
                    ppx_deriving.eq)))