(library
  (name        application)
  (wrapped     false)
  (modes       native)
  (synopsis    "app")
  (libraries   application_types util_react
               kv_v db api_cohttp_template
               containers yojson caqti-lwt
               lwt websocket-lwt.cohttp
               components_markup)
;;               pc_control pipeline
;;               boards board_dvb_niit board_ip_dektec
;;               board_qos_niit board_ts2ip_niit components_markup)
  (preprocess (pps ppx_deriving_yojson ppx_deriving.eq)))
