(library
  (name        application_js)
  ;;(public_name application_js)
  (synopsis    "app js")
  (libraries   containers yojson ppx_deriving_yojson.runtime
               api_js common components pipeline_js
               board_ip_dektec_js board_dvb_niit_js board_ts2ip_niit_js)
  (js_of_ocaml (flags (:standard  --opt 3)))
  (preprocess  (pps js_of_ocaml-ppx ppx_deriving_yojson ppx_deriving.eq)))

(rule
  (targets application_types.ml)
  (deps    (:x ../application_types.ml))
  (action  (copy %{x} %{targets})))
