(library
  (name        boards)
  (synopsis    "boards common")
  (libraries   application_types
               api_cohttp_template
               util_react
               db
               kv
               lwt
               containers
               containers.data
               yojson
               cstruct
               ctypes)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson)))
