(library
  (name        boards)
  (synopsis    "boards common")
  (libraries   application_types
               api_cohttp_template
               util_react
               db
               kv
               lwt
               yojson
               cstruct
               ctypes
               containers.data)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson)))
