(library
  (name        boards)
  (synopsis    "boards common")
  (libraries   application_types
               api_cohttp_template
               api_websocket
               util_react
               util_equal
               db
               kv
               kv_v
               lwt
               yojson
               cstruct
               ctypes)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson)))
